<resources>
    <string name="app_name">RentAway</string>
    <string name="pass">PASSWORD</string>
    <string name="userid">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="txt1">Not yet registered?</string>
    <string name="signup">SignUp</string>
    <string name="email_id">EMAIL ID</string>
    <string name="phone_no">PHONE NO.</string>
    <string name="register">Register</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_description">Navigation description</string>
    <string name="rent_my_property">Rent my property</string>


</resources>
