<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5B76A"
    android:backgroundTint="#F7E5E9"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/userid"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"

        android:layout_marginTop="25dp"
        android:layout_marginEnd="98dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="100dp"
        android:layout_marginTop="225dp"

        android:layout_marginEnd="98dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"

        android:layout_marginTop="80dp"
        android:layout_marginEnd="98dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/phoneNo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="98dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="248dp"
        android:layout_height="30dp"

        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="180dp"
        android:text="Register" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="61dp"
        android:text="@string/userid" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="133dp"
        android:text="@string/email_id" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="206dp"
        android:text="@string/phone_no" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="280dp"
        android:text="@string/pass" />

</RelativeLayout>